# financial-assistant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  example-conversation.txt  neo4j-compose.yaml  nginx-compose.yaml  spending_service.py.old  test_spending_service.py.old
.bmad-core/: core-config.yaml  install-manifest.yaml
.devcontainer/: devcontainer.json
.github/workflows/: backend-tests.yml  frontend-tests.yml  validate-openapi.yml
backend/: CLAUDE.md  openapi.json  pyproject.toml  simple_debug.py  test_conversation_handler_llm.py  test_mcp_client.py  test_mcp_graphiti.py  test_mcp_plaid.py  test_orchestrator_llm.py  test_spending_agent_real_mcp.py
backend/app/: main.py
backend/app/ai/: conversation_handler.py  financial_keywords.py  langgraph_config.py  onboarding.py  orchestrator.py  orchestrator_agent.py  spending_agent.py
backend/app/ai/mcp_clients/: __init__.py  graphiti_client.py  plaid_client.py
backend/app/core/: config.py  database.py  database_models.py  sqlmodel_models.py
backend/app/models/: __init__.py  plaid_models.py  transaction_query_models.py  user.py
backend/app/routers/: auth.py  conversation.py  plaid.py
backend/app/services/: __init__.py  auth_service.py  insights_generator.py  llm_service.py  plaid_service.py  transaction_categorization.py  user_context_dao.py
backend/app/utils/: __init__.py  context_formatting.py  date_utils.py  transaction_query_executor.py  transaction_query_parser.py
backend/data/: .gitignore
backend/mcp_clients/: __init__.py  graphiti_client.py
backend/mcp_server/: __init__.py  config.py  server.py
backend/mcp_server/tools/: __init__.py  plaid_tools.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_auth_service.py  test_config.py  test_conversation_endpoints.py  test_conversation_handler.py  test_date_utils.py  test_graphiti.py  test_graphiti_poc.py  test_insights_generator.py  test_integration_real_api.py  test_llm_service_unit.py  test_main.py  test_mcp_components.py  test_onboarding_agent_real.py  test_onboarding_agent_unit.py  test_orchestrator.py  test_orchestrator_agent_unit.py  test_orchestrator_unit.py  test_plaid_mcp_client.py  test_plaid_models.py  test_plaid_router.py  test_plaid_service.py  test_spending_agent.py  test_spending_agent_real_llm.py  test_transaction_categorization_llm.py  test_transaction_categorization_service.py  test_transaction_query_executor.py  test_transaction_query_models.py  test_transaction_storage.py  test_user_context_dao.py  test_user_models.py
backend/tests/fixtures/: __init__.py  transaction_fixtures.py
docs/: front-end-spec.md  fullstack-architecture.md  prd.md
docs/architecture/: api-specification.md  coding-standards.md  components.md  core-workflows.md  data-models.md  deferred-implementations.md  deployment-architecture.md  development-workflow.md  dual-storage-architecture.md  error-handling-strategy.md  high-level-architecture.md  index.md  introduction.md  monitoring-and-observability.md  next-steps.md  security-and-performance.md  tech-stack.md  testing-strategy.md  unified-project-structure.md
docs/prd/: epic-1-foundation-authentication.md  epic-2-financial-data-integration-user-profiling.md  epic-list.md  goals-and-background-context.md  index.md  infrastructure-requirements.md  investment-agent-enhancement.md  requirements.md  success-metrics-validation.md  success-metrics.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.1.story.md  1.4.story.md  1.5.story.md  1.6.story.md  1.7.story.md  2.0.story.md  2.1a.story.md  2.3.story.md
frontend/: .eslintrc.json  CLAUDE.md  index.html  jest.config.js  package-lock.json  package.json  rtk-query-codegen-config.json  rtk-query-codegen.config.js  rtk-query-codegen.json  rtk-query.config.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styled.d.ts
frontend/src/components/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/pages/: AboutPage.tsx  DashboardPage.tsx  HomePage.tsx  NotImplementedPage.tsx
frontend/src/store/: index.ts
frontend/src/types/: auth.ts  (+1 more)
scripts/: build-frontend.sh  dev-setup.sh  init-graphiti-db.py  run-tests.sh  start-dev.sh
(+56 files in other folders)
