[project]
name = "ai-financial-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for AI Financial Assistant"
authors = [{name = "Development Team", email = "dev@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.*",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx==0.24.*",
    "pytest-cov>=4.0.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]